--- a/tutorials/2_vqregressor.mdx
+++ b/tutorials/2_vqregressor.mdx
@@ -2,6 +2,7 @@
 title: 'Quantum Regressor'
 cover_image: 'images/tutorials/vqregressor.png'
 excerpt: 'Using a variational quantum circuit to fit one dimensional functions.'
+tags: ['functions', 'python']
 ---
 
 ## A variational quantum regressor using the parameter shift rule
@@ -32,14 +33,27 @@ Finally, let |qf> be the state we obtain by applying U to |0>.
 
 We are interested in evaluating the gradients of the following expression:
 
-```
-# We initialize the quantum regressor
+#### We initialize the quantum regressor
+
+<SyntaxHighlighter language="python">
+  {`
+   vqr.train_with_psr(
+    epochs=epochs,
+    learning_rate=learning_rate,
+    batches=batches,
+    J_treshold=J_treshold,
+    )
+  `}
+</SyntaxHighlighter>
+
+```python
 vqr = VQRegressor(layers=layers, ndata=ndata)
+```
     
-# and the initial parameters
+#### and the initial parameters
 initial_params = np.random.randn(3 * layers)
     
-# Let's go with the training
+#### Let's go with the training
 vqr.train_with_psr(
     epochs=epochs,
     learning_rate=learning_rate,
@@ -47,6 +61,6 @@ vqr.train_with_psr(
     J_treshold=J_treshold,
 )
 
-# show predictions
+#### show predictions
 vqr.show_predictions("Predictions of the VQR after training", False)
-```
+
